--- a/myinfoorteststyle.html
+++ b/myinfoorteststyle.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html>
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Information.com</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/animate.min.css" rel="stylesheet" type="text/css">
     <link href="fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
@@ -48,33 +48,50 @@
         </div>
     </nav>
 
+    <section class="section container-fluid text-center" id="works">
+        <div class="section-title text-center text-uppercase">
+            <h2 class="underlined">Desgined by :- </h2>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="work">
 
-    <section class="container-fluid text-center section" id="nyc">
-        <div class="nyc-caption">
-            <h1 class="text-uppercase">
+                        <div class="work-img"> <img src="images/m.jpg" class="img-responsive" alt="">
+                            <div class="work-title">
 
-                <font color=black style=bold>
+                                <h3 class="text-uppercase">
+                                    <a href="#">
+                                        <font color=black>
+                                            MISGANA WORKNEH
+                                        </font>
+                                    </a>
+                                </h3>
+                                <h5>
+                                    <font color=black>
+                                        PROGRAMMER
+                                    </font>
+                                </h5>
+                            </div>
+                        </div>
+                        <div class="work-caption">
+                            <div>
 
-                    what do you need right now exactly?
+                                <p class="underlined">
+                                    😀😀😀😀😀WEBDESIGN ASSIGNMENT<br> UU62185R
 
-            </h1>
-            <p>
-
-                <h2>
-                    <br><br> Do you need state of the art apartments? Well if you do you have<br> come to the right place, we have packed the apartments with full <br> accessories if you are interested visit us.
-                </h2>
-
-            </p>
-
-
-            </a>
+                                </p>
+                                -->
+                                <center>
+                                    </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-
-
-
-
-
+    </center>
 </body>
 
 </html>
