--- a/aboutus.html
+++ b/aboutus.html
@@ -1,33 +1,36 @@
 <html>
+
 <head>
 
-<font color="gray">
-<hr color="violet" size="4px"> 
-<marquee><h1>  ABC APARTMENT BUILDING </h1></marquee>
-<hr color="violet" size="4px"></font></b></em>
-<body bgcolor="lightblue">
-<font color="brown">
+    <font color="gray">
+        <hr color="violet" size="4px">
+        <marquee>
+            <h1> ABC APARTMENT BUILDING </h1>
+        </marquee>
+        <hr color="violet" size="4px">
+    </font>
+    </b>
+    </em>
 
-<h2 >  <p> This is a website for abc apartment building, we provide modern apartments with there full accessories with fair price so come and visit.<br>
-<center>We provide well maintained apartments for our clients with variety.<br>
-There are one bedroom, two bedroom and three bedroom apartments available.<br>
-We are located at Piassa around Doro Manekia. </h2></center>
+    <body bgcolor="lightblue">
+        <font color="brown">
 
-</font>
- <font color="gray"><h2><p>TELEPHONE:0920128730<br> <img src="2.jpg"size="1000" height="600"align=right></p></font>
-    email:ABCapt@gmail.com <br>
-	location:<br>
-       city:Addis ababa<br> 
-        Kifle ketema: Arada<br>
-		wereda:10,piassa. &nbsp &nbsp &nbsp &nbsp &nbsp
-		
-<font color="purple">	
-	<p> Website designer:<br>
-		Leul Masresha<br>
-		Misgana Workneh<br>
-        Hemen Yohannes<br>
-        Hermela Wondafrash<br>     
-        Eliyas Tesfu  		</p>
-</font>
-</body>
+            <h2>
+                <p> This is a website for abc apartment building, we provide modern apartments with there full accessories with fair price so come and visit.<br>
+                    <center>We provide well maintained apartments for our clients with variety.<br> There are one bedroom, two bedroom and three bedroom apartments available.<br> We are located at Piassa around Doro Manekia. </h2>
+            </center>
+
+        </font>
+        <font color="gray">
+            <h2>
+                <p>TELEPHONE:0920128730<br> <img src="2.jpg" size="1000" height="600" align=right></p>
+        </font>
+        email:ABCapt@gmail.com <br> location: Ethiopia
+        <br> city:Addis ababa<br> Kifle ketema: Arada<br> wereda:10,piassa. &nbsp &nbsp &nbsp &nbsp &nbsp
+
+        <font color="purple">
+            <p> Website designer:<br> Misgana Workneh<br>
+        </font>
+    </body>
+
 </html>
